[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Fonts/DankMono.tres" type="DynamicFont" id=3]
[ext_resource path="res://BulletList.gd" type="Script" id=4]
[ext_resource path="res://NPCList.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 275, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 275, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 200 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletList" type="Control" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VimSpawn" type="VBoxContainer" parent="."]
margin_left = 75.0
margin_right = 75.0
margin_bottom = 600.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmacsSpawn" type="VBoxContainer" parent="."]
margin_left = 949.0
margin_right = 949.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCList" type="VBoxContainer" parent="."]
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Border"]
position = Vector2( 512, 0 )
shape = SubResource( 1 )

[node name="Bottom" type="CollisionShape2D" parent="Border"]
position = Vector2( 512, 600 )
shape = SubResource( 2 )

[node name="Left" type="CollisionShape2D" parent="Border"]
position = Vector2( 0, 300 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="Border"]
position = Vector2( 1024, 300 )
shape = SubResource( 4 )

[node name="PlayerBorder" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 512, 100 )
shape = SubResource( 5 )

[node name="Bottom" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 512, 500 )
shape = SubResource( 6 )

[node name="Left" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 250, 300 )
shape = SubResource( 7 )

[node name="Right" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 774, 300 )
shape = SubResource( 8 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="PlayAgainButton" type="Button" parent="."]
visible = false
margin_left = 288.439
margin_top = 358.882
margin_right = 738.439
margin_bottom = 431.882
custom_fonts/font = ExtResource( 3 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
visible = false
margin_left = 293.0
margin_top = 360.0
margin_right = 736.0
margin_bottom = 428.0
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VimPoint" type="Label" parent="."]
margin_left = 338.202
margin_top = 23.3275
margin_right = 431.202
margin_bottom = 74.3275
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.0627451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmacsPoint" type="Label" parent="."]
margin_left = 596.506
margin_top = 25.7401
margin_right = 701.506
margin_bottom = 76.7401
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.623529, 0, 0.709804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinCenterContainer" type="CenterContainer" parent="."]
margin_left = 423.618
margin_top = 230.236
margin_right = 697.618
margin_bottom = 306.236
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="WinCenterContainer"]
margin_left = 136.0
margin_top = 31.0
margin_right = 136.0
margin_bottom = 45.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 445.397
margin_top = 520.617
margin_right = 571.397
margin_bottom = 573.617
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLabel" type="Label" parent="CenterContainer"]
margin_left = 62.0
margin_top = 19.0
margin_right = 62.0
margin_bottom = 33.0
[connection signal="button_down" from="PlayAgainButton" to="." method="_on_PlayAgainButton_button_down"]
[connection signal="button_down" from="MainMenuButton" to="." method="_on_MainMenuButton_button_down"]
